--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">InterviewProject</string>
     <string name="inohom_text">inohom</string>
+    <string name="back">Back</string>
+
     <string name="inohom_plus_text">inohom+</string>
     <string name="version_text">V1.7.0</string>
     <string name="onboarding_button_text">Accounts</string>
@@ -19,5 +21,12 @@
     <string name="sensor_text">Sensor</string>
     <string name="apartment_management_text">Apt Management</string>
     <string name="concierge_text">Concierge</string>
+    <string name="yonetim">Yönetim</string>
+    <string name="serkan">Serkan Led</string>
+    <string name="abajur">Abajur</string>
+    <string name="arge">Arge</string>
+    <string name="lorem">Lorem</string>
+    <string name="ipsum">Ipsum</string>
+
 
 </resources>
